app/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: gcr.io/retail-364515/sample-app
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
  strategy:
    canary:
      canaryService: canary
      stableService: stable
      trafficRouting:
        istio:
          virtualService:
            name: istio-rollout-vsvc
            routes:
            - primary
      steps:
      - setWeight: 10
      - pause: {}         # pause indefinitely
      - setWeight: 20
      - pause: {duration: 10s}
      - setWeight: 30
      - pause: {duration: 10s}
      - setWeight: 40
      - pause: {duration: 10s}
      - setWeight: 50
      - pause: {duration: 10s}
      - setWeight: 60
      - pause: {duration: 10s}
      - setWeight: 70
      - pause: {duration: 10s}
      - setWeight: 80
      - pause: {duration: 10s}
      - setWeight: 90
      - pause: {duration: 10s}
