app/base/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: app
---
apiVersion: v1
kind: Service
metadata:
  name: stable
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: app
